<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recordarContraseña.ForgotPwFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarForgotPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />
        <!--  app:navigationIcon="@drawable/ic_back"-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="407dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:layout_gravity="top"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:padding="10dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_geom_16" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_recuperar_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="45dp" />


            </android.support.v7.widget.CardView>


            <Button
                android:id="@+id/button_forgotPw"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/button_send" />

            <TextView
                android:id="@+id/textview_aux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:text="@string/text_forgot_password_message"
                android:textColor="#696969"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>