<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.recordarContraseña.RestablecerPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="296dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="82dp"
        android:orientation="vertical">


        <!--PW-->
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password_cambiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="45dp" />
        </android.support.v7.widget.CardView>
        <!--Condirmar PW-->
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password_cambio_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/hint_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="45dp" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button_cambiarPassword"
            style="@style/Button1"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/button_send" />

        <TextView
            android:id="@+id/tv_error_confirm_pws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="#CF1A1A"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>