<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register_formulario.Register_formFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context="">

        <!--parte img-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_geom_16" />
        </LinearLayout>

        <!--Parte campos formulario-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <!--EMAIL-->
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:minWidth="320dp"
                    android:minHeight="45dp"
                    android:singleLine="true" />
            </android.support.v7.widget.CardView>
            <!--NAME-->
             <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="Nombre"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true" />
             </android.support.v7.widget.CardView>
            <!--NICK-->
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true" />
            </android.support.v7.widget.CardView>
            <!--PHONE-->
       <!--     <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_phone"
                    android:imeOptions="actionNext"
                    android:minWidth="320dp"
                    android:minHeight="45dp"
                    android:singleLine="true" />
            </android.support.v7.widget.CardView>-->
            <!--PW-->
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="45dp" />
           </android.support.v7.widget.CardView>
            <!--Condirmar PW-->
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="45dp" />
        </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_signInRegister"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/button_sign_up" />

            <TextView
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_signup_terms"
                android:textSize="13sp" />
        </LinearLayout>


            <EditText
                android:id="@+id/tv_error_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="91dp"
                android:layout_marginEnd="106dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorBackground"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>

    </ScrollView>

 </LinearLayout>

</FrameLayout>